manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp-svc
spec:
  selector:
    app: demoapp
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 3000  
  type: ClusterIP
