manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demoapp-route
  namespace: toska-playground
  labels:
    app: demoapp
    type: external
spec:
  host: demoapp-toska-playground.apps.ocp-test-0.k8s.it.helsinki.fi 
  port:
    targetPort: 3000 
  to:
    kind: Service
    name: demoapp-svc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
